# single_switch_firmware

./: Cargo.toml  README.md  flash.sh  rust-toolchain.toml
.cargo/: config.toml
src/: bypass_switch.rs  eeprom.rs  main.rs  persistence.rs  switch.rs  switch_timer.rs  timer.rs  toggle_switch.rs
