[package]
name = "single_switch_firmware"
version = "0.1.0"
authors = ["Eric Wood <eric@ericwood.org>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
avr-device = "0.3.3"
embedded-hal = "0.2.7"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e1418391ad44e8c9655abc7235891299c738e588"
features = ["attiny85", "rt"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug-assertions = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
debug-assertions = false
